Give it another try to fix the spacing issue

--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -1,5 +1,6 @@
 .home-container {
-  padding-bottom: 70px;
+  height: calc(100vh - 120px);
+  margin-bottom: 50px;
 }
 
 .home-summary {
